--- a/mainpage.css
+++ b/mainpage.css
@@ -1,7 +1,15 @@
-#lol {
-
+head {
+    font-family: Arial;
 }
 
-#csgo {
-    background-image: 
+
+
+
+body {
+    font-family: Arial;
 }
+
+footer {
+    font-family: Arial;
+}
+
