--- a/mainpage.css
+++ b/mainpage.css
@@ -2,9 +2,6 @@ head {
     font-family: Arial;
 }
 
-
-
-
 body {
     font-family: Arial;
 }
@@ -13,3 +10,12 @@ footer {
     font-family: Arial;
 }
 
+#maintext {
+    position: absolute;
+    top: 500px;
+}
+
+#copyright {
+    position: relative;
+    top: 200px;
+}
