--- a/lol.css
+++ b/lol.css
@@ -8,7 +8,8 @@
     font-family: helvetica;
     font-size: 240%;
     top: 3em;
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     grid-template-areas: 'left right';
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 8em;
